--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ captures/
 # Android Studio 3 in .gitignore file.
 .idea/caches
 .idea/modules.xml
+.idea/misc.xml
+.idea/deploymentTargetDropDown.xml
+.idea/compiler.xml
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
