--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,13 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     -->
 
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+    <uses-feature
+        android:name="android.hardware.bluetooth_le"
+        android:required="true" />
+
+
+    <!-- Needed for running a service in the foreground and perform operations that are noticeable to the user. -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -35,10 +41,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TouchBlue"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.TouchBlue.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,10 +52,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".ScanActivity"
             android:exported="true"
             android:theme="@style/Theme.TouchBlue" />
+
+        <service
+            android:name=".BluetoothLeService"
+            android:exported="false" />
     </application>
 
 </manifest>
