--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,12 +54,12 @@
         </activity>
 
         <activity
-            android:name=".ScanActivity"
+            android:name=".ui.scanner.ScanActivity"
             android:exported="true"
             android:theme="@style/Theme.TouchBlue" />
 
         <service
-            android:name=".BluetoothLeService"
+            android:name=".BleSensorService"
             android:exported="false" />
     </application>
 
